# cmake_crosscompile

./: CMakeLists.txt  README.md  main.cpp  try_compilers.sh
